# utxghost

./: CMakeLists.txt  Makefile  README.md  main.c  notes.txt  utx.c  utx.h
src/: CMakeLists.txt  main.c
src/cli/: flags.c  flags.h  help.c  help.h  version.c  version.h
src/utx/: remove_entries.c  remove_entries.h  rm_entries_argv.c  rm_entries_argv.h  sysfiles.c  sysfiles.h  types.c  types.h
utx/: remove_entries.h  types.h
